<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Aquisition_State" Id="{b81ddc66-0f59-4375-b3f3-8230bcc47bad}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Aquisition_State :
(
	IDLE := 0,
	MOVE_TO_FIRST_POS,
	WAIT_MOVE_TO_FIRST_POS,
	MOVE_TO_TARGET_FORWARD,
	WAIT_MOVE_TO_TARGET_FORWARD,
	MOVE_TO_LAST_POS,
	WAIT_MOVE_TO_LAST_POS,
	MOVE_TO_TARGET_BACKWARD,
	WAIT_MOVE_TO_TARGET_BACKWARD,
	DONE
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>